fix adaptation mobile version

--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,3 +1,8 @@
+@media (max-width: 992px){
+    .vh-85 {
+        height: 120vh !important;
+    }
+}
 a {
     color: #286464;
     text-decoration: none;
@@ -11,3 +16,4 @@ a:hover {
 .vh-85{
     height: 85vh ;
 }
+
